--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
+    <a href="/.auth/login/github">github Login</a>
+    <a href="/.auth/login/twitter">twitter Login</a>
+    <a href="/.auth/login/aad">aad Login</a>
+    <a href="/.auth/login/aad?post_login_redirect_uri=.referrer">aad redirect Login</a>
   </main>
 </body>
 
